--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@angular/animations": "^18.0.3",
     "@angular/common": "^18.0.3",
     "@angular/compiler": "^18.0.3",
-    "@angular/core": "^18.0.3",
+    "@angular/core": "^18.0.6",
     "@angular/forms": "^18.0.3",
     "@angular/platform-browser": "^18.0.3",
     "@angular/platform-browser-dynamic": "^18.0.3",
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.0.4",
-    "@angular/cli": "~18.0.4",
+    "@angular/cli": "^18.0.7",
     "@angular/compiler-cli": "^18.0.3",
     "@angular/localize": "^18.0.3",
     "@types/jasmine": "~4.3.0",
