updates to pass api_url to docker, external file

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,8 +11,14 @@ http {
         include /etc/nginx/mime.types;
         root /usr/share/nginx/html/browser;  # Adjusted to point to your app's directory
 
+        # Serve Angular app
         location / {
             try_files $uri $uri/ /index.html;
+        }
+
+        # Serve config.json file
+        location /assets/config/config.json {
+            try_files $uri =404;
         }
     }
 }
